[tool.poetry]
name = "totp-generator"
version = "0.1.0"
description = ""
authors = ["Slay <kirill22971222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
