[tool.poetry]
name = "totp-generator"
version = "0.1.0"
description = ""
authors = ["Slay"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.35.0"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
